// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions absolute options.publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "http://localhost:8080/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions bad relative options.publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing options.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions existing options.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing options.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, existing options.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "devserver-bundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.publicPath, / compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.publicPath, absolute url compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "http://localhost:8080/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.publicPath, bad relative compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.publicPath, no compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions multi compiler, no options.publicPath, relative compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.filename, existing compiler filename should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.filename, no compiler filename should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.publicPath, / compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.publicPath, absolute url compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "http://localhost:8080/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.publicPath, bad relative compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.publicPath, no compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options.publicPath, relative compiler publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions relative options.publicPath should set correct options 1`] = `
Object {
  "filename": "mybundle.js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": [Function],
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "/path/to/custom/server/",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "filename": "[name].js",
  "inline": true,
  "liveReload": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
